--- a/Repository/Repository.csproj
+++ b/Repository/Repository.csproj
@@ -57,6 +57,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CommandSaver.cs" />
+    <Compile Include="DataServices\TokenService.cs" />
     <Compile Include="DataServices\UserService.cs" />
     <Compile Include="Enums\CommandTypes.cs" />
     <Compile Include="IStorage.cs" />
@@ -85,6 +86,12 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Common\Common.csproj">
+      <Project>{668790c3-2f79-4f65-8e4a-5e6199289c87}</Project>
+      <Name>Common</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
