adds login controller

--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -53,6 +53,8 @@
   <ItemGroup>
     <Compile Include="AuthenticationToken.cs" />
     <Compile Include="CommonModule.cs" />
+    <Compile Include="Contracts\Credentials.cs" />
+    <Compile Include="Contracts\TokenResponse.cs" />
     <Compile Include="CryptographyService.cs" />
     <Compile Include="Encryptor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
