--- a/Site/Site.csproj
+++ b/Site/Site.csproj
@@ -140,6 +140,8 @@
   <ItemGroup>
     <Compile Include="App_Start\NinjectWebCommon.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\LoginController.cs" />
+    <Compile Include="Controllers\TestController.cs" />
     <Compile Include="Filters\AuthentificationFilter.cs" />
     <Compile Include="Filters\FilterExtensions.cs" />
     <Compile Include="Filters\SitePrincipal.cs" />
@@ -161,7 +163,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Controllers\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
