--- a/Site/Web.config
+++ b/Site/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-Site-20150718095637.mdf;Initial Catalog=aspnet-Site-20150718095637;Integrated Security=True" providerName="System.Data.SqlClient" />
+        <add name="Data" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Video;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
