--- a/Site/Site.csproj
+++ b/Site/Site.csproj
@@ -140,7 +140,7 @@
   <ItemGroup>
     <Compile Include="App_Start\NinjectWebCommon.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
-    <Compile Include="Controllers\LoginController.cs" />
+    <Compile Include="Controllers\AuthorizationController.cs" />
     <Compile Include="Filters\AuthentificationFilter.cs" />
     <Compile Include="Filters\FilterExtensions.cs" />
     <Compile Include="Filters\SitePrincipal.cs" />
