--- a/Tests/packages.config
+++ b/Tests/packages.config
@@ -4,6 +4,7 @@
   <package id="AutoFixture.Xunit" version="3.30.8" targetFramework="net45" />
   <package id="FluentAssertions" version="3.4.1" targetFramework="net45" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net45" />
+  <package id="NSubstitute" version="1.8.2.0" targetFramework="net45" />
   <package id="xunit" version="1.9.2" targetFramework="net45" />
   <package id="xunit.extensions" version="1.8.0.1549" targetFramework="net45" />
 </packages>
