adds tests for AuthorizationController

--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -53,6 +53,10 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.ServiceModel" />
+    <Reference Include="System.Web.Http, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.Core.5.2.3\lib\net45\System.Web.Http.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -69,6 +73,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\DataServices\TokenServiceTests.cs" />
     <Compile Include="Repository\DataServices\UserServiceTests.cs" />
+    <Compile Include="Site\Controllers\AuthorizationControllerTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
@@ -82,6 +87,10 @@
     <ProjectReference Include="..\Repository\Repository.csproj">
       <Project>{c8877229-f99d-4c3e-94b4-45cac190e2ce}</Project>
       <Name>Repository</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Site\Site.csproj">
+      <Project>{0165b3d1-d64c-4bf6-8b82-2e9f97cbbf12}</Project>
+      <Name>Site</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
