--- a/Site/Site.csproj
+++ b/Site/Site.csproj
@@ -141,6 +141,7 @@
     <Compile Include="App_Start\NinjectWebCommon.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AuthorizationController.cs" />
+    <Compile Include="Controllers\TestController.cs" />
     <Compile Include="Filters\AuthentificationFilter.cs" />
     <Compile Include="Filters\FilterExtensions.cs" />
     <Compile Include="Filters\SitePrincipal.cs" />
